@@ -1,5 +1,6 @@
 Upcoming:
 - The dialing device is infusable again
+- Fixed the counter module to work again (fix partially done by joelra)
 
 1.18-4.0.16:
 - Fixed the blindness module recipe
